--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -99,6 +99,13 @@ header {
 .sectionContacto {
   margin: 3% 0 4% 0;
   width: 100%; }
+  .sectionContacto .contactoCartelEnviado {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .sectionContacto .contactoCartelEnviado .contactoContent {
+      color: black;
+      font-size: 1.25rem; }
   .sectionContacto form {
     margin: 2% 0 2% 17%;
     font-size: 1rem;
