--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -1,6 +1,15 @@
 .sectionContacto{
     margin: 3% 0 4% 0;
     width: 100%;
+    .contactoCartelEnviado{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .contactoContent{
+        color: black;
+        font-size: $font-20;
+        }
+    }
     form{
         margin: 2% 0 2% 17%;
         font-size: $font-16;
