--- a/views/productos.html
+++ b/views/productos.html
@@ -71,66 +71,34 @@
       </div>
     </section>
 
-    <!--Productos-->
+    <!--Iconos de carrito mas tacho-->
+    <div class="col-md-12 d-flex justify-content-end">
+      <a href="" title="Ver Carrito">
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+          </svg>
+        </button>
+      </a>
+      <a href="" title="Vaciar">
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+          </svg>
+        </button>
+      </a>
+    </div>
 
+    <!--Productos-->
     <!--Prodcuto tazas-->
     <section class="sectionProducto">
       <h2>TAZAS</h2>
       <div class="divParrafos">
         <h3>"El principio del amor es el anhelo de dar"</h3>
       </div>
-      <article>
-        <div class="divProductos">
-          <!--card 1-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/tazasMod/amor2Mod.jpg" alt="taza linea amor">
-            <h3>Linea AMOR</h3>
-            <div class="container-fluid divContCard">
-              <div class="row">
-                <p class="col-8">Capacidad 150ml</p>
-                <p class="col-4">$510</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Capacidad 250ml</p>
-                <p class="col-4">$580</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Capacidad 350ml</p>
-                <p class="col-4">$650</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Capacidad 500ml</p>
-                <p class="col-4">$800</p>
-              </div>
-            </div>
-          </div>
-          <!--card 2-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/tazasMod/calmaMod.jpg" alt="taza linea calma">
-            <h3>Linea CALMA</h3>
-            <div class="container-fluid divContCard">
-              <div class="row">
-                <p class="col-8">Capacidad 350ml</p>
-                <p class="col-4">$680</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Capacidad 500ml</p>
-                <p class="col-4">$820</p>
-              </div>
-            </div>
-          </div>
-          <!--card 3-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/tazasMod/empatiaMod.jpg" alt="taza linea empatia">
-            <h3>Linea EMPATIA</h3>
-            <div class="container-fluid divContCard">
-              <div class="row">
-                <p class="col-8">Capacidad 350ml</p>
-                <p class="col-4">$650</p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <article id="articuloTazas">
+        
       </article>
     </section>
 
@@ -140,74 +108,8 @@
       <div class="divParrafos">
         <h3>"Lo que das en amor vuelve a ti en forma de expansión"</h3>
       </div>
-      <article>
-        <div class="divProductos">
-          <!--card 1-->
-          <div class="cardProductos" id="cardCuencos">
-            <img src="../imgBarronativo2/cuencosMod/pazMod.jpg" alt="cuenco linea paz">
-            <h3>Linea PAZ</h3>
-            <div class="container-fluid divContCard">
-              <div class="row">
-                <p class="col-8">Pequeño 9cm x 5cm</p>
-                <p class="col-4">$550</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Mediano 12cm x 7cm</p>
-                <p class="col-4">$690</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Grande 15cm x 7cm</p>
-                <p class="col-4">$880</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Ensaladera 20cm x 10cm</p>
-                <p class="col-4">$1900</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Ensaladera 24cm x 10cm</p>
-                <p class="col-4">$2200</p>
-              </div>
-            </div>
-          </div>
-          <!--card 2-->
-          <div class="cardProductos" id="cardCuencos">
-            <img src="../imgBarronativo2/cuencosMod/amorMod.jpg" alt="cuenco linea amor">
-            <h3>Linea AMOR</h3>
-            <div class="container-fluid divContCard">
-              <div class="row">
-                <p class="col-8">Grande 15cm x 7cm</p>
-                <p class="col-4">$880</p>  
-              </div>
-            </div>
-          </div>
-          <!--card 3-->
-          <div class="cardProductos" id="cardCuencos">
-            <img src="../imgBarronativo2/cuencosMod/vidaMod.jpg" alt="cuenco linea vida">
-            <h3>Linea VIDA</h3>
-            <div class="container-fluid divContCard">
-              <div class="row">
-                <p class="col-8">Pequeño 9cm x 5cm</p>
-                <p class="col-4">$550</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Mediano 12cm x 7cm</p>
-                <p class="col-4">$690</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Grande 15cm x 7cm</p>
-                <p class="col-4">$880</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Ensaladera 20cm x 10cm</p>
-                <p class="col-4">$1900</p>
-              </div>
-              <div class="row">
-                <p class="col-8">Ensaladera 24cm x 10cm</p>
-                <p class="col-4">$2200</p>
-              </div>
-            </div>
-          </div> 
-        </div>
+      <article id="articuloCuencos">
+        
       </article>
     </section>
 
@@ -217,41 +119,8 @@
       <div class="divParrafos">
         <h3>"La decisión más valiente que tomó fue confiar en quién era, sin buscar corrección"</h3>
       </div>
-      <article>
-        <div class="divProductos">
-          <!--card 1-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/matesMod/calmaMod.jpg" alt="mate linea calma">
-            <h3>Linea CALMA</h3>
-            <div>
-              <p>$880</p>
-            </div>
-          </div>
-          <!--card 2-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/matesMod/libertadMod.jpg" alt="mate linea libertad">
-            <h3>Linea LIBERTAD</h3>
-            <div>
-              <p>$700</p>
-            </div>
-          </div>
-          <!--card 3-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/matesMod/purezaMod.jpg" alt="mate linea pureza">
-            <h3>Linea PUREZA</h3>
-            <div>
-              <p>$750</p>
-            </div>
-          </div>
-          <!--card 4-->
-          <div class="cardProductos">
-            <img src="../imgBarronativo2/matesMod/empatiaMod.jpg" alt="mate linea empatia">
-            <h3>Linea EMPATIA</h3>
-            <div>
-              <p>$500</p>
-            </div>
-          </div>
-        </div>
+      <article id="articuloMates">
+        
       </article>
     </section>
 
@@ -294,7 +163,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!--JS Propio-->
-    <script src="../main/scriptProductos.js"></script>
-    
+    <script src="../js/productos.js"></script>
+    <script src="../js/cargar_productos.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 </html>
