--- a/views/productos.html
+++ b/views/productos.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="barronativo, arte, emprender, artesanias, pottery, arte en barro, tazon, arte cordobes, vajilla, deco, decoracion, decohome, ensaladera, macrameart, ceramica, tazas, macetas, cuencos, teteras, artesanal, alfareria, mates, torno, producto artesanal, a mano">
     <meta name="description" content="Visualice todos los productos que tenemos para ofrecerte con mucho amor, artesanales y unicas piezas">
     <link rel="shortcut icon" href="../imgBarronativo2/logo-incom-faviconMod.jpg">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>PRODUCTOS|BARRONATIVO</title>
 
     <!--Bootstrap CSS-->
@@ -73,21 +74,37 @@
 
     <!--Iconos de carrito mas tacho-->
     <div class="col-md-12 d-flex justify-content-end">
-      <a href="" title="Ver Carrito">
+      <a title="Ver Carrito" id="iconoCarrito" data-bs-toggle="modal" data-bs-target="#carrooo">
+        
+      </a>
+      <a title="Vaciar" id="iconoTrash">
         <button>
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-          </svg>
+          <img src="../imgBarronativo2/tachoImg.svg" alt="">
         </button>
       </a>
-      <a href="" title="Vaciar">
-        <button>
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-            <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-          </svg>
-        </button>
-      </a>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="carrooo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Carrito de compras</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="cerrarModal"></button>
+          </div>
+          <div class="modal-body" id="cuerpoCarrito">
+                 
+          </div>
+          <div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" onclick="eliminarCarrito()">VACIAR</button>
+              <a href="./carrito.html">
+                <button type="button" class="btn btn-primary">COMPRAR</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!--Productos-->
@@ -97,19 +114,23 @@
       <div class="divParrafos">
         <h3>"El principio del amor es el anhelo de dar"</h3>
       </div>
-      <article id="articuloTazas">
-        
+      <article>
+        <div class="divProductos" id="articuloTazas">
+      
+        </div>
       </article>
     </section>
-
+  
     <!--Prodcuto cuencos-->
     <section class="sectionProducto">
       <h2>CUENCOS</h2>
       <div class="divParrafos">
         <h3>"Lo que das en amor vuelve a ti en forma de expansión"</h3>
       </div>
-      <article id="articuloCuencos">
-        
+      <article>
+        <div class="divProductos" id="articuloCuencos">
+      
+        </div>
       </article>
     </section>
 
@@ -119,8 +140,10 @@
       <div class="divParrafos">
         <h3>"La decisión más valiente que tomó fue confiar en quién era, sin buscar corrección"</h3>
       </div>
-      <article id="articuloMates">
-        
+      <article>
+        <div class="divProductos" id="articuloMates">
+      
+        </div>
       </article>
     </section>
 
@@ -164,7 +187,8 @@
 
     <!--JS Propio-->
     <script src="../js/productos.js"></script>
-    <script src="../js/cargar_productos.js"></script>
     <script src="../js/carrito.js"></script>
+    <script src="../js/cargar_productos.js"></script>
+    <script src="../js/mainCarrito.js"></script>
 </body>
 </html>
