avance cargarProductos.js

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -60,8 +60,8 @@
     </section>
     
 
-    <script src="../js/cargar_productos.js"></script>
+    <!-- <script src="../js/cargar_productos.js"></script>
     <script src="../js/carrito.js"></script>
-    <script src="../js/mainCarrito.js"></script>
+    <script src="../js/mainCarrito.js"></script> -->
 </body>
 </html>
