--- a/views/productos.html
+++ b/views/productos.html
@@ -98,8 +98,8 @@
           <div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" onclick="eliminarCarrito()">VACIAR</button>
-              <a href="./carrito.html">
-                <button type="button" class="btn btn-primary">COMPRAR</button>
+              <a href="./carrito.html" id="aModal">
+              
               </a>
             </div>
           </div>
