--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer{
     padding: 3% 0 3% 0;
-    background-color: #a8a75ca8;
+    background-color: #e3ccb2;
     .flexElementFooter{
         display: flex;
         align-items: center;
