--- a/assets/scss/_pagProducto.scss
+++ b/assets/scss/_pagProducto.scss
@@ -25,10 +25,10 @@
 
 
 .sectionProducto{
-    background-color: #FED2AA;
+    background-color: #F7E9D7;
     margin-bottom: 8%;
     h2{
-        background-color: #c3692dc5;
+        background-color: #EBD8C3;
         padding: 1% 0 1% 0;
     }
     .divParrafos{
