--- a/assets/scss/_quienesSomos.scss
+++ b/assets/scss/_quienesSomos.scss
@@ -19,7 +19,7 @@
 }
 
 .flexSobreProd{
-    background-color: #FAE7D2;
+    background-color: #EBD8C3;
     display: flex;
     margin-top: 3%;
     padding: 3% 0 3% 0;
