--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,7 +6,7 @@ $font-32: 2rem;
 $font-48: 3rem;
 
 //colores centrales
-$marronOscuro: #e29450ea;
+$marronOscuro: #EBD8C3;
 
 //tamaño de alto y ancho en porcentaje
 $height-20: 20%;
