--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -9,7 +9,7 @@ a{
 }
 
 body{
-    background-color: #FED2AA;
+    background-color: #F7E9D7;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -18,4 +18,7 @@ h2{
     font-style: italic;
     text-align: center;
     font-weight: bold;
+}
+.toastifyNotification{
+    color: #FED2AA
 }
