--- a/views/carrito.html
+++ b/views/carrito.html
@@ -19,6 +19,12 @@
 
     <!--CSS propio-->
     <link rel="stylesheet" href="../assets/css/estilos.css">
+
+    <!--JS sweet alert-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!--JS toastify-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <header> <!--encabezado-->
@@ -58,10 +64,47 @@
           
         </div>
     </section>
-    
 
-    <!-- <script src="../js/cargar_productos.js"></script>
+    <section id="formuCompra" class="sectionContacto">
+      <div id="contenedorContacto" class="contactoCartelEnviado"></div>
+      <h2 id="contactoH2">Datos para el envio</h2>
+      <form id="formularioId">
+        <div class="row mb-3 divBarraGral">
+          <label for="nombre" class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control formBarra" id="nombre" placeholder="NOMBRE Y APELLIDO">
+          </div>
+        </div>
+        <div class="row mb-3 divBarraGral">
+          <label for="email" class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-6">
+            <input type="email" class="form-control formBarra" id="email" placeholder="EMAIL">
+          </div>
+        </div>
+        <div class="row mb-3 divBarraGral">
+          <label for="telefono" class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-6">
+            <input type="number" class="form-control formBarra" id="telefono" placeholder="TELEFONO">
+          </div>
+        </div>
+        <div class="row mb-3 divBarraGral">
+          <label for="ayuda" class="col-sm-2 col-form-label"></label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control formBarra" id="direccion" placeholder="DIRECCION">
+          </div>
+        </div>
+        <div class="divBotones">
+          <button id="botonEnviar" class="btn">Enviar</button>
+          <button type="reset" class="btn">Resetear</button>
+        </div>
+      </form>
+    </section>
+
+    <!--JS Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!--JS Propio-->
     <script src="../js/carrito.js"></script>
-    <script src="../js/mainCarrito.js"></script> -->
+    <script src="../js/finalCompra.js"></script>
 </body>
 </html>
