--- a/assets/scss/carrito.scss
+++ b/assets/scss/carrito.scss
@@ -1,5 +1,3 @@
-
-
 .tablaCarrito{
     margin-top: 4%;
     font-size: 1.2rem;
@@ -11,4 +9,17 @@
 .pOculto{
     font-size: 1.3rem;
     margin-top: 7%;
+}
+
+.btnFinal{
+    background-color: #EBD8C3;
+}
+.center{
+    text-align: center;
+    background-color: #F7E9D7;
+}
+
+.divFinalizarCompra{
+    width: 100%;
+    margin-top: 5%;
 }
