--- a/views/carrito.html
+++ b/views/carrito.html
@@ -57,47 +57,16 @@
             </div>
           </nav>
     </header>
-
-    <section class="sectionProducto">
-        <h2>CARRITO DE COMPRAS</h2>
-        <div id="prodSeleccionados">
-          
-        </div>
+    
+    <section id="formuCompra" class="sectionContacto">
+    
+      
     </section>
 
-    <section id="formuCompra" class="sectionContacto">
-      <div id="contenedorContacto" class="contactoCartelEnviado"></div>
-      <h2 id="contactoH2">Datos para el envio</h2>
-      <form id="formularioId">
-        <div class="row mb-3 divBarraGral">
-          <label for="nombre" class="col-sm-2 col-form-label"></label>
-          <div class="col-sm-6">
-            <input type="text" class="form-control formBarra" id="nombre" placeholder="NOMBRE Y APELLIDO">
-          </div>
-        </div>
-        <div class="row mb-3 divBarraGral">
-          <label for="email" class="col-sm-2 col-form-label"></label>
-          <div class="col-sm-6">
-            <input type="email" class="form-control formBarra" id="email" placeholder="EMAIL">
-          </div>
-        </div>
-        <div class="row mb-3 divBarraGral">
-          <label for="telefono" class="col-sm-2 col-form-label"></label>
-          <div class="col-sm-6">
-            <input type="number" class="form-control formBarra" id="telefono" placeholder="TELEFONO">
-          </div>
-        </div>
-        <div class="row mb-3 divBarraGral">
-          <label for="ayuda" class="col-sm-2 col-form-label"></label>
-          <div class="col-sm-6">
-            <input type="text" class="form-control formBarra" id="direccion" placeholder="DIRECCION">
-          </div>
-        </div>
-        <div class="divBotones">
-          <button id="botonEnviar" class="btn">Enviar</button>
-          <button type="reset" class="btn">Resetear</button>
-        </div>
-      </form>
+    <section class="sectionProducto">
+      <div id="prodSeleccionados">
+       
+      </div>
     </section>
 
     <!--JS Bootstrap-->
@@ -105,6 +74,6 @@
 
     <!--JS Propio-->
     <script src="../js/carrito.js"></script>
-    <script src="../js/finalCompra.js"></script>
+    <script src="../js/datosCompra.js"></script>
 </body>
 </html>
