corregir errores generales de cada archivo

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="barronativo, arte, emprender, artesanias, pottery, arte en barro, tazon, arte cordobes, vajilla, deco, decoracion, decohome, ensaladera, macrameart, ceramica, tazas, macetas, cuencos, teteras, artesanal, alfareria, mates, torno, producto artesanal, a mano">
-    <meta name="description" content="">
     <link rel="shortcut icon" href="../imgBarronativo2/logo-incom-faviconMod.jpg">
     <title>CARRITO|BARRONATIVO</title>
 
@@ -57,12 +56,13 @@
             </div>
           </nav>
     </header>
-    
+
+    <!--Formulario para comprar-->
     <section id="formuCompra" class="sectionContacto">
-    
-      
+
     </section>
 
+    <!--Resumen de compra-->
     <section class="sectionProducto">
       <div id="prodSeleccionados">
        
